<resources>
    <string name="app_name">iNDOK</string>
    <string name="todo1">TODO</string>
    <string name="todo_text1">TODO</string>
    <string name="username_text">username</string>
    <string name="password_text">password</string>
    <string name="login_text">login</string>
    <string name="enter_password_text">Enter password</string>
    <string name="enter_username_text">Enter Username</string>
    <string name="new_user_text">New user?</string>
    <string name="signup_text">Signup</string>
    <string name="re_enter_password_text">Re-enter Password</string>
    <string name="submit_text">Submit</string>
    <string name="name_text">Name</string>
    <string name="username1_text">Username</string>
    <string name="enter_email_text">Enter Email</string>
    <string name="confim_text">Confim</string>
    <string name="email_text">Email</string>
    <string name="enter_username_text1">Enter Username</string>
    <string name="enter_name_text">Enter Name</string>
    <string name="enter_password_text1">Enter Password</string>
    <string name="todo_text2">TODO</string>
    <string name="signup_text1">signup</string>
    <string name="name_text1">Name:</string>
    <string name="username_text1">Username:</string>
    <string name="email_text1">Email:</string>
    <string name="password_text1">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="enter_password_text3">Enter Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="clickhere">Clickhere</string>
    <string name="enter_your_mobile_number_text">Enter Your Mobile Number</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="continue_text">Continue</string>
    <string name="todo_text">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo">todo</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="app_record">Record Video</string>


</resources>